--- a/css/sobre.css
+++ b/css/sobre.css
@@ -25,7 +25,7 @@
     margin: 5px auto auto 1px;;
     padding: 0;
     overflow: hidden;
-    background-color: #ccc;
+    background-color: #C0C0C0;
 }
 .menu-opcoes li {
     float: left
@@ -47,15 +47,15 @@
     float: right;
 }
 .btn-info {
-    color: black;
+    color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
     float: right;
     width: 130px;
     height: 55px;
-    background-color: #ccc;
+    background-color: #C0C0C0;
 }
 .btn-info:hover {
-    background-color: #777;
+    background-color: #111;
 }
 body {
     color: #333333;
