--- a/css/estilo.css
+++ b/css/estilo.css
@@ -141,6 +141,7 @@ body {
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 10px;
+    text-shadow: 3px 3px 2px gray;
 }
 .painel a {
     color: #333;
